2A/05_Projet_GL/src/test/deca/syntax/invalid/Objet/15_MethodSansType.deca
// Description:
//    Programme definition d'une methode sans type de retour 
// Resultats:
//      Programme incorrecte syntaxiquement : 9:8: no viable alternative at input 'getF('
// Historique:
//    cree le 17/01/2023
class A extends B {
    protected boolean f = true;
    getF()
    {
        return f;
    }
}